Added basic evaluation function

--- a/Basic QA system - Enhancements.ipynb
+++ b/Basic QA system - Enhancements.ipynb
@@ -261,9 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -273,12 +273,13 @@
     "from nltk.data import find\n",
     "\n",
     "word2vec_sample = str(find('models/word2vec_sample/pruned.word2vec.txt'))\n",
-    "word2vec_model = gensim.models.Word2Vec.load_word2vec_format(word2vec_sample, binary=False) # Use this if newer gensim: gensim.models.KeyedVectors.load_word2vec_format(word2vec_sample, binary=False)"
+    "# word2vec_model = gensim.models.Word2Vec.load_word2vec_format(word2vec_sample, binary=False) \n",
+    "word2vec_model = gensim.models.KeyedVectors.load_word2vec_format(word2vec_sample, binary=False) # Use this if newer gensim:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -351,11 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alex/anaconda2/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -375,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -388,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -435,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -447,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -469,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -511,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -556,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -568,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -733,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -758,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -793,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -818,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -835,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -849,12 +859,12 @@
       "\n",
       "Part A Output: \n",
       "\n",
-      "[{   'question_index': 0, 'sentence_index': 253, 'set_index': 0}]\n",
+      "[{   'question_index': 0, 'sentence_index': 149, 'set_index': 0}]\n",
       "\n",
-      "Retrieval Correct:  174\n",
-      "Retrieval Wrong:  230\n",
+      "Retrieval Correct:  156\n",
+      "Retrieval Wrong:  248\n",
       "Retrieval Total:  404\n",
-      "Retrieval Overall Average %:  0.430693069307\n",
+      "Retrieval Overall Average %:  0.386138613861\n",
       "\n"
      ]
     }
@@ -874,7 +884,7 @@
     "#                                         \"y_sup\": False,\n",
     "#                                         \"gen_model\": True})\n",
     "\n",
-    "process_retrieval(\"rapid\", DATA, True, {\"cached\" : True, \n",
+    "process_retrieval(\"rapid\", DATA, True, {\"cached\" : False, \n",
     "                                        \"train_enhancement\": False,\n",
     "                                        \"use_enhancement\": True,\n",
     "                                        \"enhancement_dataset\": \"rapid\",\n",
@@ -1078,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1126,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1145,13 +1155,13 @@
     "    for subtree in chunks.subtrees():\n",
     "        if subtree.label() == 'ANS':\n",
     "            possAnswers.append((' '.join(word for word, pos in subtree.leaves()),'O'))\n",
-    "    possAnswers.append((\"Nope\", \"CRAP\")) # To ensure nothing has 0 tags\n",
+    "    possAnswers.append((\"Nope\", \"NOTAG\")) # To ensure nothing has 0 tags\n",
     "    return possAnswers    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1193,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1285,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1363,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -1401,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1419,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1463,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1486,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1686,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -1727,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -1773,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -1820,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -1854,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1879,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -1967,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -1991,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -2002,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -2017,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -2052,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -2083,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -2222,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -2269,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -2292,7 +2302,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "\n",
+      "0.75\n",
+      "\n",
+      "0.5\n",
+      "\n",
+      "0.25\n",
+      "\n",
+      "0\n",
+      "\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# measures average overlap \n",
+    "def get_evaluation_score(predicted_answer, answer):\n",
+    "    if predicted_answer == answer :\n",
+    "        return 1\n",
+    "\n",
+    "    tokenised_true_answer = nltk.word_tokenize(answer)\n",
+    "    tokenised_poss_answer = nltk.word_tokenize(predicted_answer)\n",
+    "    \n",
+    "    matches = 0\n",
+    "    surpluss_words = 0\n",
+    "    for word in tokenised_poss_answer:\n",
+    "        if word in tokenised_true_answer:\n",
+    "            matches += 1\n",
+    "        else :\n",
+    "            surpluss_words += 1\n",
+    "    \n",
+    "    percentage_correct = (matches + 0.0) / len(tokenised_true_answer)\n",
+    "\n",
+    "    percentage_incorrect = (surpluss_words + 0.0) / len(tokenised_poss_answer)\n",
+    "\n",
+    "    \n",
+    "    answer_score  = (((2 * percentage_correct) - percentage_incorrect) / 2)\n",
+    "\n",
+    "    if answer_score < 0 :\n",
+    "        answer_score = 0\n",
+    "    return answer_score \n",
+    "\n",
+    "print get_evaluation_score('haggis', 'haggis')\n",
+    "print\n",
+    "print get_evaluation_score('three pounds', 'three')\n",
+    "print\n",
+    "print get_evaluation_score(\"three\", \"three pounds\")\n",
+    "print\n",
+    "print get_evaluation_score(\"three cheese\", \"three pounds\")\n",
+    "print\n",
+    "print get_evaluation_score(\"nope\", \"three pounds\")\n",
+    "print\n",
+    "print get_evaluation_score(\"nope three pounds\", \"cheese three pounds\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -2307,6 +2383,7 @@
     "    \n",
     "    correct = []\n",
     "    wrong = []\n",
+    "    total_score = 0\n",
     "    \n",
     "    c_output_answer_set = data[name][\"c_output_answer_set\"]\n",
     "    \n",
@@ -2317,20 +2394,26 @@
     "        \n",
     "        predicted_answer = result_c[\"predicted_answer\"]\n",
     "        vector_ranked_answers = result_c[\"vector_ranked_answers\"]                \n",
-    "\n",
+    "        \n",
+    "        total_score += get_evaluation_score(predicted_answer, answer)\n",
+    "        \n",
     "        if (predicted_answer == answer):\n",
     "            correct.append(result_c)\n",
     "        else :\n",
     "            wrong.append(result_c)\n",
     "#         break\n",
     "        #print correct\n",
+    "    avg_score =(total_score + 0.0) / len(c_output_answer_set)\n",
+    "    print\n",
+    "    print \"Average Forgiving Metric Score \" + str (avg_score)\n",
+    "    print\n",
     "    return (correct, wrong)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -2355,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -2416,38 +2499,14 @@
       "                                         2,\n",
       "                                         0.09523809523809523]]}]\n",
       "\n",
+      "\n",
+      "Average Forgiving Metric Score -0.701336060804\n",
+      "\n",
       "Rank Correct:  35\n",
       "Rank Wrong:  369\n",
       "Rank Total:  404\n",
       "Rank Overall Average %:  0.0866336633663\n",
       "Rank Correct Average of Previous %:  0.472972972973\n",
-      "\n",
-      "Processing rank:  rapid\n",
-      "\n",
-      "Part C Output: \n",
-      "[   {   'candidates': [   (u'They', 'O'),\n",
-      "                          (u'had', 'O'),\n",
-      "                          (u'a', 'O'),\n",
-      "                          (u'playing time', 'O'),\n",
-      "                          (u'of', 'O'),\n",
-      "                          (u'eight minutes', 'NUMBER'),\n",
-      "                          (u'.', 'PUNC')],\n",
-      "        'predicted_answer': u'eight minutes',\n",
-      "        'question_index': 0,\n",
-      "        'ranked_answers': [   [   (u'eight minutes', 'NUMBER'),\n",
-      "                                  0.38095238095238093]],\n",
-      "        'sentence_index': 149,\n",
-      "        'set_index': 0,\n",
-      "        'vector_ranked_answers': [   [   (u'eight minutes', 'NUMBER'),\n",
-      "                                         2,\n",
-      "                                         2,\n",
-      "                                         0.09523809523809523]]}]\n",
-      "\n",
-      "Rank Correct:  41\n",
-      "Rank Wrong:  363\n",
-      "Rank Total:  404\n",
-      "Rank Overall Average %:  0.101485148515\n",
-      "Rank Correct Average of Previous %:  0.554054054054\n",
       "\n"
      ]
     }
@@ -2459,11 +2518,11 @@
     "                                    \"use_enhancement\": False,\n",
     "                                    \"enhancement_dataset\": \"rapid\"})\n",
     "\n",
-    "process_rank(\"rapid\", DATA, True, {\"cached\" : True,\n",
-    "                                    \"train_enhancement\": False,\n",
-    "                                    \"gen_model\": False,\n",
-    "                                    \"use_enhancement\": True,\n",
-    "                                    \"enhancement_dataset\": \"rapid\"})\n",
+    "#process_rank(\"rapid\", DATA, True, {\"cached\" : True,\n",
+    "#                                    \"train_enhancement\": False,\n",
+    "#                                    \"gen_model\": False,\n",
+    "#                                    \"use_enhancement\": True,\n",
+    "#                                    \"enhancement_dataset\": \"rapid\"})\n",
     "\n",
     "# process_rank(\"rapid\", DATA, True, {\"cached\" : True,\n",
     "#                                     \"train_enhancement\": False,\n",
@@ -3262,9 +3321,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py27]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [py27]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3276,7 +3335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
