--- a/Basic QA system - Final Workflow.ipynb
+++ b/Basic QA system - Final Workflow.ipynb
@@ -1456,6 +1456,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# measures average overlap \n",
+    "def get_evaluation_score(predicted_answer, answer):\n",
+    "    if predicted_answer == answer :\n",
+    "        return 1\n",
+    "\n",
+    "    tokenised_true_answer = nltk.word_tokenize(answer)\n",
+    "    tokenised_poss_answer = nltk.word_tokenize(predicted_answer)\n",
+    "    \n",
+    "    matches = 0\n",
+    "    surpluss_words = 0\n",
+    "    for word in tokenised_poss_answer:\n",
+    "        if word in tokenised_true_answer:\n",
+    "            matches += 1\n",
+    "        else :\n",
+    "            surpluss_words += 1\n",
+    "    \n",
+    "    percentage_correct = (matches + 0.0) / len(tokenised_true_answer)\n",
+    "\n",
+    "    percentage_incorrect = (surpluss_words + 0.0) / len(tokenised_poss_answer)\n",
+    "\n",
+    "    \n",
+    "    answer_score  = (((2 * percentage_correct) - percentage_incorrect) / 2)\n",
+    "\n",
+    "    if answer_score < 0 :\n",
+    "        answer_score = 0\n",
+    "    return answer_score "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 300,
    "metadata": {
     "collapsed": true
@@ -1464,13 +1500,14 @@
    "source": [
     "# For each question, evaluate if the answer is present as an entity\n",
     "\n",
-    "def evaluate_rank(name, data):\n",
+    "def evaluate_rank(name, data, args):\n",
     "    \n",
     "    question_set = data[name][\"question_set\"]\n",
     "    document_set = data[name][\"document_set\"]\n",
     "    \n",
     "    correct = []\n",
     "    wrong = []\n",
+    "    total_score = 0\n",
     "    \n",
     "    c_output_answer_set = data[name][\"c_output_answer_set\"]\n",
     "    \n",
@@ -1480,16 +1517,32 @@
     "        answer =  question_set[result_c[\"set_index\"]][result_c[\"question_index\"]][\"answer\"]\n",
     "        \n",
     "        predicted_answer = result_c[\"predicted_answer\"]\n",
-    "\n",
+    "        vector_ranked_answers = result_c[\"vector_ranked_answers\"]                \n",
+    "        \n",
+    "        total_score += get_evaluation_score(predicted_answer, answer)\n",
+    "        \n",
     "        if (predicted_answer == answer):\n",
     "            correct.append(result_c)\n",
     "        else :\n",
     "            wrong.append(result_c)\n",
     "#         break\n",
     "        #print correct\n",
+    "    avg_score =(total_score + 0.0) / len(c_output_answer_set)\n",
+    "    print\n",
+    "    print \"Average Forgiving Metric Score \" + str (avg_score)\n",
+    "    print\n",
     "    return (correct, wrong)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
