Added flex metric.

--- a/Basic QA system - Enhancements.ipynb
+++ b/Basic QA system - Enhancements.ipynb
@@ -2683,6 +2683,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# measures average overlap \n",
+    "def get_evaluation_score(predicted_answer, answer):\n",
+    "    if predicted_answer == answer :\n",
+    "        return 1\n",
+    "\n",
+    "    tokenised_true_answer = nltk.word_tokenize(answer)\n",
+    "    tokenised_poss_answer = nltk.word_tokenize(predicted_answer)\n",
+    "    \n",
+    "    matches = 0\n",
+    "    surpluss_words = 0\n",
+    "    for word in tokenised_poss_answer:\n",
+    "        if word in tokenised_true_answer:\n",
+    "            matches += 1\n",
+    "        else :\n",
+    "            surpluss_words += 1\n",
+    "    \n",
+    "    percentage_correct = (matches + 0.0) / len(tokenised_true_answer)\n",
+    "\n",
+    "    percentage_incorrect = (surpluss_words + 0.0) / len(tokenised_poss_answer)\n",
+    "\n",
+    "    \n",
+    "    answer_score  = (((2 * percentage_correct) - percentage_incorrect) / 2)\n",
+    "\n",
+    "    if answer_score < 0 :\n",
+    "        answer_score = 0\n",
+    "    return answer_score \n",
+    "\n",
+    "print get_evaluation_score('haggis', 'haggis')\n",
+    "print\n",
+    "print get_evaluation_score('three pounds', 'three')\n",
+    "print\n",
+    "print get_evaluation_score(\"three\", \"three pounds\")\n",
+    "print\n",
+    "print get_evaluation_score(\"three cheese\", \"three pounds\")\n",
+    "print\n",
+    "print get_evaluation_score(\"nope\", \"three pounds\")\n",
+    "print\n",
+    "print get_evaluation_score(\"nope three pounds\", \"cheese three pounds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 862,
    "metadata": {
     "collapsed": false
@@ -2698,8 +2746,7 @@
     "    \n",
     "    correct = []\n",
     "    wrong = []\n",
-    "    \n",
-    "#     partial = []\n",
+    "    total_score = 0\n",
     "    \n",
     "    c_output_answer_set = data[name][\"c_output_answer_set\"]\n",
     "    \n",
@@ -2710,18 +2757,20 @@
     "        \n",
     "        predicted_answer = result_c[\"predicted_answer\"]\n",
     "        vector_ranked_answers = result_c[\"vector_ranked_answers\"]                \n",
-    "\n",
+    "        \n",
+    "        total_score += get_evaluation_score(predicted_answer, answer)\n",
+    "        \n",
     "        if (predicted_answer == answer):\n",
     "            correct.append(result_c)\n",
     "        else :\n",
     "            wrong.append(result_c)\n",
-    "            \n",
-    "#             print(answer, predicted_answer)\n",
-    "#             print vector_ranked_answers\n",
-    "#             break\n",
+    "#         break\n",
     "        #print correct\n",
-    "    return (correct, wrong)\n",
-    "    "
+    "    avg_score =(total_score + 0.0) / len(c_output_answer_set)\n",
+    "    print\n",
+    "    print \"Average Forgiving Metric Score \" + str (avg_score)\n",
+    "    print\n",
+    "    return (correct, wrong)"
    ]
   },
   {
